--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/hamburger.js"></script>
     <script src="js/mainInput.js"></script>
     <script src="js/login_registration.js"></script>
+    <script src="js/cities.js"></script>
 
     <link rel="stylesheet" href="datepicker/dist/css/datepicker.material.css">
     <script src="datepicker/dist/datepicker.js"></script>
@@ -585,6 +586,11 @@
                 <div class="input textInput">
                     <input class="inputContent" type="text" id="city" placeholder="Укажите город"/>
                     <img src="assets/all/Search.svg" class="inputLogo"/>
+
+                    <div class="citiesContent">
+                        <div class="citiesContentFixer">
+                        </div>
+                    </div>
                 </div>
             </div>
 
